# typescript-sdk

./: .gitignore  BUILD.bazel  README.md  package.json  rollup.config.mjs  test_dial.js  test_dial.ts  test_wasm.js  test_wasm2.js  tsconfig.json
examples/: browser_demo.ts  openai_realtime_demux.ts  web_client.html
src/: client.ts  methods.ts  supervise.ts  telequick_core_cc.js  telequick_core_cc.wasm
tests/: client.test.ts
